fixed the code editor popup going offscreen at the bottom of the log; added event listener to listen for clicks on the modal to close it ou

--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -244,7 +244,7 @@ tbody tr:hover {
 
 #log-viewer {
   margin-top: 20px;
-  height: 100%; /* CodeMirror container height*/
+  height: 99%; /* CodeMirror container height*/
   overflow: hidden !important;
 }
 
